Breakpoint flicker bug fix

--- a/css/main.css
+++ b/css/main.css
@@ -108,7 +108,7 @@ footer img {
 /* ----------responsive section styles---------- */
 
 @media (max-width: 1000px) {
-    
+
     .hamburgerMenu {
         width: 30px;
         height: 23px;
@@ -125,7 +125,7 @@ footer img {
         height: 3px;
         border-radius: 3px;
         background-color: #FFFFFF;
-        transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+        transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
     }
 
     .hamburgerMenu.open span:nth-child(1) {
@@ -138,14 +138,14 @@ footer img {
 
     .hamburgerMenu.open span:nth-child(3) {
         transform: translateY(-10px) rotate(-45deg);
-    } 
+    }
 
     nav {
         padding: 0em 1em;
         background-color: #121212;
     }
 
-    .logo{
+    .logo {
         font-size: var(--mobile-logo-size);
     }
 
@@ -153,20 +153,23 @@ footer img {
         background-color: #121212cc;
         backdrop-filter: blur(10px);
         position: fixed;
-        transform: translateX(100%);
         top: 0;
         right: 0;
-        /* width: clamp(10em, 75%, 15em); */
         width: 15em;
         height: 100vh;
         flex-direction: column;
         padding-top: calc(var(--mobile-logo-size) - 1em);
         gap: 0em;
-        transition: transform 0.5s ease-in-out;
+        transform: translateX(100%);
+        opacity: 0;
+        visibility: hidden;
+        transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
     }
 
     nav ul.open {
         transform: translateX(0);
+        opacity: 1;
+        visibility: visible;
     }
 
     nav ul li {
@@ -197,8 +200,7 @@ footer img {
     }
 }
 
-@media (max-width: 325px)
-{
+@media (max-width: 325px) {
     nav ul {
         width: 100%;
     }
